# ck-shelf

./: README.md  pyproject.toml  rxconfig.py
.web/: env.json  package.json  reflex.install_frontend_packages.cached  reflex.json
.web/.react-router/types/: +routes.ts
.web/.react-router/types/app/routes/+types/: [explore]._index.ts
.web/app/: root.jsx
.web/app/routes/: [explore]._index.jsx  _index.jsx
.web/public/: sitemap.xml
.web/utils/: context.js
ck_shelf/: ck_shelf.py
ck_shelf/backend/: state.py
ck_shelf/components/: card.py  navbar.py
ck_shelf/pages/: explore.py  index.py
