[project]
name = "ck-shelf"
version = "0.1.0"
description = ""
authors = [
    {name = "mookapinya",email = "apinya.le@nocnoc.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "reflex (>=0.8.9,<0.9.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
